package edu.hitsz.prop;


public class BulletProp extends AbstractProp{
    public BulletProp(int locationX, int locationY, int speedX, int speedY){
        super(locationX, locationY, speedX, speedY);
    }
}
